css/styles.css
@import url("https://use.typekit.net/tgw2mpa.css");

:root {
    /* global css base color variables ----------------*/

    --color-yellow: #ffad29;
    --color-yellow-light: #ffda9e;

    --color-red: #d32436;
    --color-red-light: #f3bbc1;

    --color-dark: #233143;
    --color-light: #fbf1dd;

    /* global fonts variables ----------------*/

    /* fontsize */
    --font-h1: 72px;
    --font-h2: 60px;
    --font-h3: 42px;
    --font-h4: 36px;
    --font-h5: 30px;
    --font-h6: 24px;
    --font-p1: 20px;
    --font-p2: 16px;
    --font-p3: 14px;

    /* font families */
    --fontFamily-primary: "objektiv-mk1", sans-serif;
    --fontFamily-secondary: "sofia-pro", sans-serif;

    /* font weights */
    --fontWeight-bold: 800;
    --fontWeight-semiBold: 600;
    --fontWeight-medium: 500;
    --fontWeight-regular: 400;

    /* Global color declarations for commen css porperties --- */
    /* Change base color as needed ---------------------*/

    /* Border colors */
    --border-dark: var(--color-dark);
    --border-light: var(--color-light);

    /* Background colors */
    --bg-dark: var(--color-dark);
    --bg-light: var(--color-light);
    --bg-highlight: var(--color-yellow-light);

    /* Button colors */
    --primary-btn-yellow: var(--color-yellow);
    --primary-btn-yellow-hover: var(--color-yellow-light);

    --primary-btn-red: var(--color-red);
    --primary-btn-red-hover: var(--color-red-light);

    --secondary-btn: var(--color-light);
    --secondary-btn-hover: var(--color-dark);

    /* Text/icon colors */
    --text-dark: var(--color-dark);
    --text-light: var(--color-light);
    --text-highlight: var(--color-yellow-light);
}

/* Css reset */
* {
    margin: 0;
}

body {
    font-family: var(--fontFamily-secondary), sans-serif, Verdana, Geneva, Tahoma, sans-serif;
    font-weight: var(--fontWeight-medium);
}

/* header navigation -- used for all pages*/

.page-header {
    position: sticky;
    top: 0;
    max-width: 100%;
    z-index: 20;
    background-color: var(--bg-dark);
    color: var(--text-light);
}

.header-wrapper {
    position: relative;
    margin: auto;
    display: grid;
    grid-template-columns: minmax(112px, 1fr) minmax(152px, 1fr) minmax(111px, 1fr);
    grid-auto-rows: minmax(64px, auto);
    justify-content: space-between;
    align-items: center;
}

.hamburger-menu-checkbox,
.searchfield-container {
    display: none;
}

.hamburger-menu-icon,
.searchfield-icon,
.cart-page__icon {
    font-size: var(--font-h6);
}

.hamburger-menu-label {
    padding: 0 20px;
}

.hamburger-menu-label,
#hamburger-menu:checked ~ .header-nav {
    display: block;
}

.header-nav {
    display: none;
    position: absolute;
    top: 62px;
    left: 0;
    width: 100%;
    background-color: var(--bg-dark);
    border-top: 5px solid var(--bg-highlight);
}

.header-nav__items {
    padding: 15px;
}

.header-nav__list {
    display: flex;
    flex-direction: column;
}

.header-nav__list,
.footer-nav__list {
    list-style: none;
    padding: 0;
}

.header-nav__link {
    padding: 0 10px;
}

.header-nav__link--highlight {
    color: var(--text-highlight);
}

.header-nav__link,
.cart-page-link {
    text-decoration: none;
    color: var(--text-light);
}

.header-nav__link--highlight,
.cart-page__icon {
    color: var(--text-highlight);
}

.logo {
    max-width: 200px;
    min-width: 87px;
    padding: 0 33px;
}

.logo__image {
    width: 100%;
    object-fit: cover;
}

.right-align-wrapper {
    display: flex;
    justify-content: end;
    padding-right: 20px;
}

.cart-page-link {
    margin-left: 35px;
}

/* Call-to-action Buttons -- Used for all pages */

.cta {
    text-align: center;

    font-family: var(--fontFamily-secondary);
    font-size: var(--font-p1);
    font-weight: var(--fontWeight-bold);

    border-radius: 8px;
    text-decoration: none;
}

.cta--sizeBig {
    padding: 6px 56px;
}

.cta--primary-yellow {
    background-color: var(--primary-btn-yellow);
    color: var(--text-dark);
}

/* Homepage --------------------------------------------*/

.page-header,
.home-page-hero__title,
.footer-nav__title {
    font-family: var(--fontFamily-primary);
}

/* main section */

.home-page-hero {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    min-height: 600px;
    min-width: 375px;
    gap: 30px;
    margin: auto;
    background-image: url("/images/Homepage-hero-img.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.home-page-hero:before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.4);
}

.home-page-hero__wrapper {
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    margin: auto 0;
}

.home-page-hero__wrapper > * {
    text-align: center;
}

.home-page-hero__title {
    font-size: var(--font-h3);
    color: var(--text-light);
    padding: 10px 20px;
}

.home-page-hero__under-title {
    font-size: var(--font-h4);
    color: var(--text-light);
    padding: 10px;
    text-transform: capitalize;
}

/* Product category section  */

.product-collection {
    margin: 0 auto 50px auto;

    display: grid;
    grid-template-columns: 312px;
    grid-template-rows: minmax(5px, auto);
    grid-auto-rows: 360px;
    grid-gap: 52px 43px;

    justify-content: center;

    font-family: var(--fontFamily-secondary);
}

.product-collection__title {
    grid-column: span 1;
    text-align: center;
    justify-self: start;
    font-size: var(--font-h4);
    color: var(--text-dark);
    margin-top: 40px;
}

.product-category {
    /* position: relative; */
    min-width: 312px;
    min-height: 360px;
    background-color: lightblue;
    background-size: cover;
    background-position: center;
    /* 
    display: flex;

    align-items: end;
    justify-content: space-around; */

    text-decoration: none;
}

.canoer-product-img {
    background-image: url("/images/canoer-jacket-img.jpg");
}
.outdoorer-product-img {
    background-image: url("/images/Outdoor-jacket-img.jpg");
}
.hiker-product-img {
    background-image: url("/images/Hiker-jacket-img.jpg");
}
.skiier-product-img {
    background-image: url("/images/skiier-jacket-img.jpg");
}
.camper-product-img {
    background-image: url("/images/camper-jacket-img.jpg");
}
.explorer-product-img {
    background-image: url("/images/explorer-jacket-img.jpg");
}

/* .product-category::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: rgb(226, 218, 172);
    background: linear-gradient(180deg, rgba(226, 218, 172, 0) 0%, rgba(171, 164, 130, 0.41) 35%, rgba(91, 88, 69, 0.69) 69%, rgba(0, 0, 0, 1) 100%);
} */

.product-category > * {
    z-index: 1;
    margin-bottom: 20px;
}

.product-category__title {
    font-size: var(--font-h5);
    color: var(--text-light);
    max-width: 150px;
    line-height: 1.2;
}

.fa-arrow-right {
    padding: 10px;
    border-radius: 100%;
    background-color: var(--bg-highlight);
    color: var(--text-dark);
    font-size: var(--font-h5);
}

/* Footer navigation -- used for all pages */

.page-footer {
    min-width: 375px;
    display: grid;
    grid-template-rows: minmax(312px, auto) minmax(24px, auto);
    background-color: var(--bg-dark);
}

.footer-wrapper {
    box-sizing: border-box;
    max-width: 328px;
    margin: auto;
    display: grid;
    grid-template-columns: minmax(209px, 1fr) 1fr;
}

.footer-nav__jackets,
.footer-nav__explore {
    color: var(--text-light);
}

.footer-nav__title {
    font-size: var(--font-h5);
    margin: 0;
}

.footer-nav__link {
    font-size: var(--font-p2);
    color: var(--text-light);
    line-height: 2rem;
    text-decoration: none;
}

.footer-copyright {
    background-color: var(--bg-light);
}

.footer-copyright__symbol {
    text-align: center;
    margin: 0;
    padding: 5px 0;
}

/* Responsive Design -- Media queries ------------------*/

/* 900px (small tablet) */

@media screen and (min-width: 758px) {
    .header-nav {
        top: 88px;
    }

    .right-align-wrapper {
        justify-content: end;
    }

    .product-collection {
        grid-template-columns: repeat(2, 312px);
    }

    .product-collection__title {
        grid-column: span 2;
        font-size: var(--font-h3);
    }

    .product-category__title {
        font-size: var(--font-h4);
    }

    .footer-wrapper {
        max-width: 665px;
        grid-template-columns: minmax(380px, 1fr) 1fr;
    }
}

/* 1240px (laptop) */

@media screen and (min-width: 1100px) {
    .header-wrapper {
        max-width: 1240px;
    }

    .hamburger-menu-label {
        display: none;
    }

    .header-nav {
        display: block;
        position: static;
        border: none;
    }

    .header-nav__list {
        flex-direction: row;
    }

    .right-align-wrapper {
        position: relative;
        align-items: center;
    }

    .searchfield-label {
        position: absolute;
        left: 83px;
        background-color: var(--text-dark);
        align-self: center;
        padding: 11px;
        border-radius: 10px;
    }

    .searchfield-container {
        display: block;
        width: 250px;
        min-height: 50px;
        display: flex;
        align-content: center;
        align-self: center;
        justify-content: end;
        background-color: var(--bg-light);
        border-radius: 10px;
    }

    .searchfield-container__input {
        padding: 10px;
        max-width: 183px;
        border-radius: 10px;
        border: 0;
        background-color: var(--bg-light);
        font-size: var(--font-p2);
    }

    .home-page-hero__title {
        font-size: var(--font-h1);
    }

    .home-page-hero__under-title {
        font-size: var(--font-h2);
    }

    .product-collection {
        grid-template-columns: repeat(3, 312px);
    }

    .product-collection__title {
        grid-column: span 3;
    }

    .footer-wrapper {
        min-width: 1024px;
        grid-template-columns: minmax(380px, auto) 1fr;
    }
}

